tests/generics_type_arity_bad.stderr
tests/generics_type_arity_bad.hop:7:8: error: HOP2104: generic type argument arity mismatch: generic type 'Pair' expects 2 type arguments, got 1
