tests/generics_type_arity_bad.hop
struct Pair[A, B] {
	first  A
	second B
}

fn main() {
	var x Pair[i32]
	_ = x
}
